changed default town name

--- a/Configs/DynamicCombatPatrols.conf
+++ b/Configs/DynamicCombatPatrols.conf
@@ -10,7 +10,7 @@ NO_SCR_CombatPatrolsConfig {
  }
  m_aPatrolAreas {
   NO_SCR_PatrolAreaConfig "{59B90900801AC637}" {
-   m_sAreaName "Saint_Philippe"
+   m_sAreaName "Example_Town_Name"
    m_bHasIntel 0
    m_bHasHVT 0
   }
