--- a/Configs/DynamicCombatPatrols.conf
+++ b/Configs/DynamicCombatPatrols.conf
@@ -4,7 +4,7 @@ NO_SCR_DCP_CombatPatrolsConfig {
    m_sFactionKey "US"
    m_pFactionAssets NO_SCR_DCP_PatrolAssetsConfig "{59B90900827C04F5}" {
    }
-   m_pFactionTaskSpawners NO_SCR_DCP_PatrolTasksConfig "{59B9090082F81153}" {
+   m_pFactionTasks NO_SCR_DCP_PatrolTasksConfig "{59D36375BB898C1C}" {
    }
   }
  }
